--- a/frontend/src/blocks/header/__logo/header__logo.css
+++ b/frontend/src/blocks/header/__logo/header__logo.css
@@ -1,22 +1,17 @@
 .header__logo {
-    display: block;
+    color: #ffffff;
     width: 142px;
     height: 33px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
     background-image: url('../../../image/Header_logo.svg');
-    cursor: pointer;
-  }
-  
-  @media (max-width: 1080px) {
+}
+
+@media screen and (max-width: 900px) {
     .header__logo {
-      width: 104px;
-      height: 25px;
-      margin-left: 30px;
-      background-size: 104px 25px;
+        width: 104px;
+        height: 25px;
+        margin-left: 40px;
     }
-  }
-  
-  @media (max-width: 633px) {
-    .header__logo {
-      align-self: flex-start;
-    }
-  }
+}
