--- a/frontend/src/blocks/login/__button-submit/login__button-submit.css
+++ b/frontend/src/blocks/login/__button-submit/login__button-submit.css
@@ -11,6 +11,7 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
+    cursor: pointer;
   }
   
   .login__button-submit:hover {
